--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.0.2",
     "react-redux-firebase": "^3.0.0-alpha.11",
     "react-redux-firestore": "0.0.1",
+    "react-repeatable": "^2.0.1",
     "react-router-dom": "^4.4.0-beta.8",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
