--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.9.4",
+    "lodash.throttle": "^4.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
